added tests, fixed bin install

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ version = 0.01
 [CopyFilesFromBuild]
 copy = cpanfile
 copy = LICENSE
+[ExecDir]
 [GatherDir]
 exclude_filename = cpanfile
 exclude_filename = LICENSE
