--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
 name    = App-wu
-author  = David Farrell <sillymoos@cpan.org>
+author  = David Farrell <dfarrell@cpan.org>
 license = Perl_5
 copyright_holder = David Farrell
-copyright_year   = 2014
+copyright_year   = 2015
 
-version = 0.02
+version = 0.03
 
 [CPANFile]
 [License]
@@ -31,7 +31,7 @@ location = root
 [PodSyntaxTests]
 [PodCoverageTests]
 [TestRelease]
-[EOLTests]
+[Test::EOL]
 [UploadToCPAN]
 [ConfirmRelease]
 [Clean]
